# autograd

./: .gitignore  CMakeLists.txt  Design Doc.txt  main.cpp
examples/: rk4.cpp  rk4.h
include/: autodiff.h  gradcheck.h  library.h  optimization.h  owned_tensor.h  runtime.h  symbols.h  types.h  utils.h
src/: autodiff.cpp  gradcheck.cpp  optimization.cpp  runtime.cpp  utils.cpp
